now it works on chrome
